# kitchen-display-server

./: .gitignore  README.md  pixi.toml  pyproject.toml
docs/: kitchen-host-api.md
docs/plans/: 2026-05-11-server-mvp-plan.md
docs/specs/: 2026-05-11-server-mvp-design.md
scripts/: smoke_install.sh  sync_deps.py
skill/: SKILL.md  build.py  build.sh  skill.yaml
src/kitchen_display_server/: __init__.py  cli.py  config.py  image.py  logging_setup.py  server.py  server_entry.py
src/xte_kitchen_server/: __init__.py  cli.py  config.py  image.py  logging_setup.py  server.py  server_entry.py  storage.py
systemd/: hermes-kitchen-display-server.service  hermes-xte-kitchen-server.service
tests/: conftest.py  helpers.py  test_cli.py  test_config.py  test_image.py  test_logging.py  test_server_agent.py  test_server_device.py  test_server_entry.py  test_server_loopback.py  test_storage.py
