[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "xte-kitchen-server"
version = "0.1.0"
description = "Kitchen-display host service for the Xteink X4 (Hermes-driven)."
authors = [
    { name = "Ugur Oezdemir", email = "ugur@bonsairobotics.ai" },
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi==0.119.1",
    "httpx==0.28.1",
    "pillow==11.3.0",
    "pydantic==2.13.4",
    "rich==13.9.4",
    "starlette==0.48.0",
    "typer==0.25.1",
    "uvicorn[standard]==0.34.3",
]

[project.license]
text = "MIT"

[project.scripts]
xte-kitchen = "xte_kitchen_server.cli:app"
xte-kitchen-server = "xte_kitchen_server.server_entry:main"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
]
